# synergy

./: .gitattributes  .gitignore  .pandoc_rtd_environment.yml  .readthedocs.yaml  CHANGELOG.md  MANIFEST.in  Makefile  README.md  RELEASE_PROCESS.md  _index.rst  _modules.rst  deploy.txt  musyc_fit.html  musyc_fit_new.html  pyproject.toml  setup.py  tox.ini
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml
.github/workflows/: main.yml  pr_checks.yml
datasets/: sample_data_1.csv
development/: hill_jac.py  jacobians.py  musyc_jacobian.py  musyc_jacobian2.py  musyc_jacobian_correct.txt  musyc_jacobian_gamma.py  musyc_jacobian_gamma.txt  musyc_jacobian_gamma_final.txt  musyc_jacobian_gamma_final_v2.txt  musyc_jacobian_gamma_v2.py  musyc_jacobian_gamma_v2.txt  musyc_jacobian_validate.py  musyc_jacobians.txt  musyc_jacobians_replaced.txt  sed_replace.txt  sed_replace_correct.txt  sed_replace_jacobian.txt  sed_replace_jacobian_v2.txt  sed_test.txt
development/comparison/: comprae_zip.py
development/devs/: bliss_higher.py  braid_true.html  ci_higher.py  ci_reference_debug.py  dev_braid.py  dev_hill.py  dev_musyc.py  dev_zimmer.py  hsa_higher.py  isosurfaces.html  loewe_higher.py  musyc_fit_new.html  musyc_higher.py  schindler_higher.py  x_musyc_higher.py  xdev_braid.py  xdev_musyc.py
development/non_dimensionalization/: musyc.py  musyc_jacobian.py  musyc_jacobian_correct.txt
development/oldcombinations/old/: musycgamma.py
development/oldsingles/old/: hill.py
development/replace_exponents/: musyc.txt  musyc.txt.processed  musyc_jacobian.txt  musyc_jacobian.txt.processed  replace_exponents.py  verify_equality.py
development/tests/: braid_fit.html  braid_true.html  musyc_fit.html  test_braid_new.py  test_hillnew.py  test_musycnew.py  test_zimmer_new.py
docs/: conf.py  index.rst  modules.rst  regenerate.txt  synergy.combination.jacobians.rst  synergy.combination.rst  synergy.higher.rst  synergy.rst  synergy.single.rst  synergy.utils.rst
docs/source/: conf.py  index.md  index.rst  installation.md  modules.rst  overview.md
docs/source/api/: api_reference.rst  combination.rst  higher.rst  single.rst  utils.rst
docs/source/models/: single_drugs.rst  synergy_models.rst
examples/: _old_musyc_gamma.html  example_bliss.py  example_ci.py  example_hill.py  example_hsa.py  example_loewe.py  example_musyc.py  example_musyc_orthogonal.py  example_plotly.py  example_schindler.py  example_sham.py  example_zimmer.py  example_zip.py  musyc_gamma.html  musyc_gamma.py  musyc_gamma_fit.html  musyc_gamma_old.py  musyc_nogamma_fit.html  musyc_notebook.ipynb  plotly_musyc.html  schindler.html
examples/new/: braid_notebook.ipynb  example_musyc.py  loewe_notebook.ipynb  plot.html  zimmer_notebook.ipynb
examples/synergyfinder_comparison/: zip_test_data.csv
examples/synergyfinder_comparison/create/: compare_python_vs_braid.py  create_comparison_data1.py  create_comparison_data2.py  create_comparison_data3.py
scripts/: prepare_changelog.py  release.sh
src/synergy/: __init__.py  datasets.py  synergy_exceptions.py
src/synergy/combination/: __init__.py  base.py  basenew.py  bliss.py  braid.py  combination_index.py  hsa.py  loewe.py  musyc.py  musyc_jacobian.py  musycgamma.py  musycgnew.py  nonparametric_base.py  parametric_base.py  schindler.py  zero_interaction_potency.py  zimmer.py  zimmernew.py
src/synergy/higher/: __init__.py  bliss.py  combination_index.py  hsa.py  loewe.py  musyc.py  nonparametric_base.py  parametric_base.py  schindler.py
src/synergy/single/: __init__.py  base.py  hill.py  hillnew.py  marginal.py  parametric_base.py
src/synergy/utils/: __init__.py  base.py  data_exchange.py  dose_tools.py  plots.py  utils.py
synergy/: __init__.py  datasets.py  exceptions.py  typing.py  version.py
synergy/combination/: __init__.py  base.py  bliss.py  braid.py  combination_index.py  hsa.py  loewe.py  models.py  musyc.py  musyc_gamma.py  musyc_jacobian.py  nonparametric_base.py  parametric_base.py  schindler.py  synergy_model_2d.py  zero_interaction_potency.py  zimmer.py
synergy/combination/jacobians/: musyc_jacobian.py
synergy/datasets/: __init__.py
synergy/datasets/data/: 2d.csv  3d.csv  4d.csv  hill.csv  sham_2d.csv  sham_3d.csv
synergy/development/: musyc_jacobian_correct_final.txt  musyc_jacobians_replaced_final.txt
synergy/higher/: __init__.py  bliss.py  combination_index.py  hsa.py  loewe.py  musyc.py  parametric_base.py  schindler.py  synergy_model_Nd.py
synergy/plot/: constants.py  plot_mixins.py
synergy/single/: __init__.py  dose_response_model_1d.py  hill.py  log_linear.py  marginal.py  nonparametric.py  parametric_base.py
synergy/testing_utils/: __init__.py  assertions.py  synthetic_data_generators.py  synthetic_data_loader.py  test_data_loader.py
synergy/tests/: test_hill.py  test_hill_jac.py  test_musyc.py  test_musyc_jac.py  test_sham.py  test_zimmer.py
synergy/utils/: __init__.py  base.py  data_exchange.py  dose_tools.py  dose_utils.py  model_mixins.py  plots.py  utils.py
tests/: compare_zip.R  plotly_musyc.html  test_bliss.py  test_ci.py  test_efficiency.py  test_hsa.py  test_loewe.py  test_musyc.py  test_plotly.py  test_plots.py  test_schindler.py  test_sham.py  test_synergy.py  test_zimmer.py  test_zip.py  zip_test_data.csv
tests/combination/: test_CI.py  test_bliss.py  test_braid.py  test_combination_index.py  test_dose_dependent_models.py  test_hsa.py  test_loewe.py  test_musyc.py  test_plots.py  test_schindler.py  test_zimmer.py  test_zip.py
tests/combination/data/: generate_synthetic_test_data.py  plot.html  synthetic_BRAID_asymmetric_1.csv  (+20 more)
tests/combination_old/: test_braid.py  test_musyc.py
tests/higher/: test_bliss.py  test_combination_index.py  test_hsa.py  test_loewe.py  test_musyc.py  test_schindler.py
tests/single/: test_hill.py  test_hill_new.py  test_log_linear.py
tests/synergyfinder_comparison/: compare_zip.R  synergyfinder_output.csv
tests/testing_utils/: synthetic_data.py
tests/utils/: test_dose_utils.py  test_model_mixins.py  test_utils.py
(+60 files in other folders)
